2012-08-26  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/sys-os.boot (flushStdout): Remove as unused.
	* interp/i-toplev.boot (recordAndPrint): Do not print a newline
	before formatting the result.

2012-08-26  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/debug.lisp: Remove reference to TOK and CHR.
	* interp/spad-parser.boot: Likewise.
	* interp/g-error.boot: Likewise.
	* interp/sys-globals.boot: Likewise.
	* interp/br-saturn.boot: Replace TERSYSCOMAND by
	terminateSystemCommand.
	* interp/i-syscmd.boot: Likewise.
	(terminateSystemCommand): Simplify.
	* interp/spad.lisp (TERSYSCOMMAND): Remove.

2012-08-26  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* include/sockio.h (init_purpose_table): Remove declaration.
	(redirect_stdio): Likewise.
	(init_socks): Likewise.
	(flush_stdout): Likewise.
	(print_line): Likewise.
	(BaloonServer): Remove.
	(DebugWindow): Likewise.
	(Forker): Likewise.
	(AV): Likewise.
	* interp/server.boot (serverReadLine): Do not flushOutput.
	* interp/sys-constants.boot ($MessageServer): Remove.
	($DebugWindow): Likewise.
	($Forker): Likewise.
	* interp/sys-os.boot (printLine): Remove associated foreign import.
	* lib/sockio-c.c (init_purpose_table): Do not export.
	(init_socks): Likewise.
	(get_socket_type): Simplify.  Remove dead code.
	(redirect_stdio): Remove.
	(flush_stdio): Likewise.
	(print_line): Likewise.

2012-08-25  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/br-saturn.boot: Replace TERPRI with finishLine.
	* interp/c-util.boot: Likewise.
	* interp/clam.boot: Likewise.
	* interp/compiler.boot: Likewise.
	* interp/diagnostics.boot: Likewise.
	* interp/format.boot: Likewise.
	* interp/functor.boot: Likewise.
	* interp/g-error.boot: Likewise.
	* interp/ht-util.boot: Likewise.
	* interp/i-syscmd.boot: Likewise.
	* interp/i-toplev.boot: Likewise.
	* interp/postpar.boot: Likewise.
	* interp/setvars.boot: Likewise.
	* interp/topics.boot: Likewise.
	* interp/trace.boot: Likewise.

2012-08-25  Gabriel Dos Reis  <gdr@cs.tamu.edu>
