@@ -1,22 +1,22 @@
 extern int PSCreateFile(int , Window , Window , char * );
 extern int Gdraws_drawFrame(int , Window , Window , char * );
 extern int Gdraws_setDimension(Window , Window );
-extern int GDrawImageString(GC , Window , int , int , char * , int , int );
+extern int GDrawImageString(GC , Window , int , int , const char* , int , int );
 extern int GDrawArc(GC , Window , int , int , unsigned int , unsigned int , int , int , int );
 extern int GDrawLine(GC , Window , int , int , int , int , int );
 extern int GDrawLines(GC , Window , XPoint * , int , int , int );
 extern int GDrawPoint(Window , GC , int , int , int );
-extern int GDrawString(GC , Window , int , int , char * , int , int );
+extern int GDrawString(GC , Window , int , int , const char* , int , int );
 extern int GFillArc(GC , Window , int , int , unsigned int , unsigned int , int , int , int );
 extern int PSGlobalInit(void );
 extern int PSInit(Window , Window );
-extern int PSCreateContext(GC , char * , int , int , int , float , float );
+extern int PSCreateContext(GC , const char* , int , int , int , float , float );
 extern char * PSfindGC(GC );
 extern int GSetForeground(GC , float , int );
 extern int GSetBackground(GC , float , int );
 extern int GSetLineAttributes(GC , int , int , int , int , int );
 extern int PSClose(void );
-extern int centerX(GC , char * , int , int );
+extern int centerX(GC , const char* , int , int );
 extern int centerY(GC , int );
 extern int PSColorPolygon(float , float , float , XPoint * , int );
 extern int PSColorwOutline(float , float , float , XPoint * , int );
@@ -30,7 +30,8 @@ extern void XDeleteAssoc(Display * , HashTable * , Window );
 extern int GDrawRectangle(GC , Window , short , short , short , short , int );
 extern int GDraw3DButtonOut(GC , Window , short , short , short , short , int );
 extern int GDraw3DButtonIn(GC , Window , short , short , short , short , int );
-extern int GDrawPushButton(Display * , GC , GC , GC , Window , short , short , short , short , int , char * , unsigned long , unsigned long , int );
+extern int GDrawPushButton(Display * , GC , GC , GC , Window , short ,
+short , short , short , int , const char* , unsigned long , unsigned long , int );
 #ifdef _GFUN_C
 static void filecopy(FILE * , FILE * );
 static int TrivEqual(Window , Window );
