@@ -2,7 +2,7 @@
 #define spad11_height 16
 #define spad11_x_hot -1
 #define spad11_y_hot -1
-static char spad11_bits[] = {
+static const char spad11_bits[] = {
    0x00, 0x20, 0x00, 0x00, 0x00, 0x70, 0x00, 0x00, 0x00, 0x20, 0x00, 0x00,
    0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xac, 0x39, 0xb6, 0x1d,
    0x32, 0x26, 0x49, 0x12, 0x21, 0xa6, 0x50, 0x12, 0x21, 0xa6, 0x50, 0x12,
