@@ -2,7 +2,7 @@
 #define spadBitmap_height 20
 #define spadBitmap_x_hot 15
 #define spadBitmap_y_hot 10
-static char spadBitmap_bits[] = {
+static const char spadBitmap_bits[] = {
    0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
    0x00, 0x00, 0x00, 0x00, 0x80, 0x00, 0x00, 0x00, 0x00, 0xc0, 0x01, 0x00,
    0x00, 0x00, 0x80, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xf8,
