@@ -1,5 +1,5 @@
 extern void writeTitle(void);
 extern void drawTheViewport(int );
-extern viewPoints * makeViewport(char *  , int  , int  , int  , int  , int );
+extern viewPoints * makeViewport(const char*  , int  , int  , int  , int  , int );
 extern viewPoints * makeView2D(view2DStruct * );
 
